// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup /> snapshot should match snapshot 1`] = `
<ButtonGroup>
  <div
    className="md-button-group-wrapper"
    data-compressed={false}
    data-orientation="horizontal"
    data-round={false}
    data-separator={false}
    data-spaced={false}
  >
    <ButtonPill
      key="0"
    >
      <ButtonSimple
        aria-disabled={false}
        className="md-button-pill-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-grown={false}
        data-inverted={false}
        data-outline={false}
        data-shallow-disabled={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-pill-wrapper md-button-simple-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-grown={false}
              data-inverted={false}
              data-outline={false}
              data-shallow-disabled={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span>
                Example A
              </span>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <ButtonSimple
        aria-disabled={false}
        className="md-button-circle-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-inverted={false}
        data-multiple-children={false}
        data-outline={false}
        data-shallow-disabled={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-circle-wrapper md-button-simple-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-inverted={false}
              data-multiple-children={false}
              data-outline={false}
              data-shallow-disabled={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span>
                A
              </span>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup /> snapshot should match snapshot when spaced 1`] = `
<ButtonGroup
  spaced={true}
>
  <div
    className="md-button-group-wrapper"
    data-compressed={false}
    data-orientation="horizontal"
    data-round={false}
    data-separator={false}
    data-spaced={true}
  >
    <ButtonPill
      key="0"
    >
      <ButtonSimple
        aria-disabled={false}
        className="md-button-pill-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-grown={false}
        data-inverted={false}
        data-outline={false}
        data-shallow-disabled={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-pill-wrapper md-button-simple-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-grown={false}
              data-inverted={false}
              data-outline={false}
              data-shallow-disabled={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span>
                Example A
              </span>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <ButtonSimple
        aria-disabled={false}
        className="md-button-circle-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-inverted={false}
        data-multiple-children={false}
        data-outline={false}
        data-shallow-disabled={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-circle-wrapper md-button-simple-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-inverted={false}
              data-multiple-children={false}
              data-outline={false}
              data-shallow-disabled={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span>
                A
              </span>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup /> snapshot should match snapshot with className 1`] = `
<ButtonCircle
  className="example-class"
>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-circle-wrapper example-class"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-inverted={false}
    data-multiple-children={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-circle-wrapper example-class md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-inverted={false}
          data-multiple-children={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonCircle>
`;

exports[`<ButtonGroup /> snapshot should match snapshot with id 1`] = `
<ButtonCircle
  id="example-id"
>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-circle-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-inverted={false}
    data-multiple-children={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    id="example-id"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-circle-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-inverted={false}
          data-multiple-children={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonCircle>
`;

exports[`<ButtonGroup /> snapshot should match snapshot with orientation = vertical 1`] = `
<ButtonGroup
  orientation="vertical"
>
  <div
    className="md-button-group-wrapper"
    data-compressed={false}
    data-orientation="vertical"
    data-round={false}
    data-separator={false}
    data-spaced={false}
  >
    <ButtonPill
      key="0"
    >
      <ButtonSimple
        aria-disabled={false}
        className="md-button-pill-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-grown={false}
        data-inverted={false}
        data-outline={false}
        data-shallow-disabled={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-pill-wrapper md-button-simple-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-grown={false}
              data-inverted={false}
              data-outline={false}
              data-shallow-disabled={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span>
                Example A
              </span>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <ButtonSimple
        aria-disabled={false}
        className="md-button-circle-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-inverted={false}
        data-multiple-children={false}
        data-outline={false}
        data-shallow-disabled={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-circle-wrapper md-button-simple-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-inverted={false}
              data-multiple-children={false}
              data-outline={false}
              data-shallow-disabled={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span>
                A
              </span>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup /> snapshot should match snapshot with role 1`] = `
<ButtonGroup
  role="tablist"
>
  <div
    className="md-button-group-wrapper"
    data-compressed={false}
    data-orientation="horizontal"
    data-round={false}
    data-separator={false}
    data-spaced={false}
    role="tablist"
  >
    <ButtonPill
      key="0"
    >
      <ButtonSimple
        aria-disabled={false}
        className="md-button-pill-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-grown={false}
        data-inverted={false}
        data-outline={false}
        data-shallow-disabled={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-pill-wrapper md-button-simple-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-grown={false}
              data-inverted={false}
              data-outline={false}
              data-shallow-disabled={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span>
                Example A
              </span>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <ButtonSimple
        aria-disabled={false}
        className="md-button-circle-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-inverted={false}
        data-multiple-children={false}
        data-outline={false}
        data-shallow-disabled={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-circle-wrapper md-button-simple-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-inverted={false}
              data-multiple-children={false}
              data-outline={false}
              data-shallow-disabled={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span>
                A
              </span>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup /> snapshot should match snapshot with round 1`] = `
<ButtonGroup
  round={true}
>
  <div
    className="md-button-group-wrapper"
    data-compressed={false}
    data-orientation="horizontal"
    data-round={true}
    data-separator={false}
    data-spaced={false}
  >
    <ButtonPill
      key="0"
    >
      <ButtonSimple
        aria-disabled={false}
        className="md-button-pill-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-grown={false}
        data-inverted={false}
        data-outline={false}
        data-shallow-disabled={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-pill-wrapper md-button-simple-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-grown={false}
              data-inverted={false}
              data-outline={false}
              data-shallow-disabled={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span>
                Example A
              </span>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <ButtonSimple
        aria-disabled={false}
        className="md-button-circle-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-inverted={false}
        data-multiple-children={false}
        data-outline={false}
        data-shallow-disabled={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-circle-wrapper md-button-simple-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-inverted={false}
              data-multiple-children={false}
              data-outline={false}
              data-shallow-disabled={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span>
                A
              </span>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup /> snapshot should match snapshot with separator 1`] = `
<ButtonGroup
  separator={true}
>
  <div
    className="md-button-group-wrapper"
    data-compressed={false}
    data-orientation="horizontal"
    data-round={false}
    data-separator={true}
    data-spaced={false}
  >
    <ButtonPill
      key="0"
    >
      <ButtonSimple
        aria-disabled={false}
        className="md-button-pill-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-grown={false}
        data-inverted={false}
        data-outline={false}
        data-shallow-disabled={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-pill-wrapper md-button-simple-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-grown={false}
              data-inverted={false}
              data-outline={false}
              data-shallow-disabled={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span>
                Example A
              </span>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <ButtonSimple
        aria-disabled={false}
        className="md-button-circle-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-inverted={false}
        data-multiple-children={false}
        data-outline={false}
        data-shallow-disabled={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-circle-wrapper md-button-simple-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-inverted={false}
              data-multiple-children={false}
              data-outline={false}
              data-shallow-disabled={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span>
                A
              </span>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup /> snapshot should match snapshot with style 1`] = `
<ButtonCircle
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonSimple
    aria-disabled={false}
    className="md-button-circle-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-inverted={false}
    data-multiple-children={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-circle-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-inverted={false}
          data-multiple-children={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "color": "pink",
            }
          }
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonCircle>
`;
